
Version 0.3.8 - ??
- [new] add WFWebApplicationDelegate::rerouteInvocationPath() function to allow routing customizations.
- [bugfix] WFYAHOO_widget_TabView no longer tries to select tabs from $_REQUEST[$tabViewId] if the tab does not exist. This caused no tab to be selected in some cases.

Version 0.3.7 - 6/10/2010
- [bugfix] Add htmlspecialchars() to WFYAHOO_widget_AutoComplete.
- [new] Added a hash() function to WFArray to make it easy to create hashes of object models. Great for use with JSON.
- [new] Added srcWidth and srcHeight fields to WFImage that can be populated with the source image's dimensions in lieu of supplying a filesystemPath and having the system look up the image dimensions from the local file. This is useful for performance reasons, and also when you are not storing the image locally.
- [bugfix] Improve the way the WFDieselNav loading image is set up to avoid the Firefox 3.6 "fetching" of bogus URLs found in <img src=""> tags.
- [bugfix] WFModel (and the skeleton generator) will use the Primary Key field as the descriptiveColumnName if the entity has no string field.
- [bugfix] WFCheckbox didn't invalidate its internal state when the checked/unchecked values were set, causing it to get out of sync with the restoreState() cycle.
- [bugfix] Fix WFYAHOO_widget_AutoComplete dynamicDataLoader mode. It was broken when we upgraded to YUI 2.6.0; it now works again.
- [new] Added support for target attribute in WFForm.
- [improved] Updated handling of bindings when keyPath cannot be resolved:
  - New binding option RaisesForNotApplicableKeys (boolean) which if set to false will cause the NotApplicablePlaceholder to be used rather than throwing an exception.
  - New binding option NotApplicablePlaceholder (mixed) which will be used if RaisesForNotApplicableKeys is set to false.
  - pullBindings() now only skips processing of the current bound property (instead of all properties for the widget) when an exception is encountered.